<resources>
    <string name="app_name">It19034456</string>
    <string name="home">Home</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="profileManagement">ProfileManagement</string>
    <string name="Dateofbirth">Date of birth</string>
    <string name="male">Male</string>
    <string name="female">Femal</string>
    <string name="updateProfile">Update Profile</string>
    <string name="editProfile">EditProfile</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
</resources>